// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SaveSearchExecutionContent /> component rendering matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SaveSearchExecutionContent
    onDefaultSortingChange={[MockFunction]}
    onSaveSearchNameChange={[MockFunction]}
    onSortingOrderChange={[MockFunction]}
    onTrackResultInDashboardChange={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Label
          labelFor="Save This Search"
          value="Name"
        >
          <Textfield
            className={undefined}
            data-test="save-this-search-name-field"
            disabled={false}
            invalid={false}
            onChange={[MockFunction]}
            placeholder="Enter a name for this saved search"
            quiet={true}
            readOnly={false}
            required={false}
          />
        </Label>,
        <div
          className={undefined}
        >
          <Checkbox
            checked={false}
            indeterminate={false}
            label="Track this search result in dashboard"
            onChange={[Function]}
          />
        </div>,
        false,
      ],
      "data-test": "save-this-search-dialog-content",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Textfield
            className={undefined}
            data-test="save-this-search-name-field"
            disabled={false}
            invalid={false}
            onChange={[MockFunction]}
            placeholder="Enter a name for this saved search"
            quiet={true}
            readOnly={false}
            required={false}
          />,
          "labelFor": "Save This Search",
          "value": "Name",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": undefined,
            "data-test": "save-this-search-name-field",
            "disabled": false,
            "invalid": false,
            "onChange": [MockFunction],
            "placeholder": "Enter a name for this saved search",
            "quiet": true,
            "readOnly": false,
            "required": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Checkbox
            checked={false}
            indeterminate={false}
            label="Track this search result in dashboard"
            onChange={[Function]}
          />,
          "className": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": false,
            "indeterminate": false,
            "label": "Track this search result in dashboard",
            "onChange": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Label
            labelFor="Save This Search"
            value="Name"
          >
            <Textfield
              className={undefined}
              data-test="save-this-search-name-field"
              disabled={false}
              invalid={false}
              onChange={[MockFunction]}
              placeholder="Enter a name for this saved search"
              quiet={true}
              readOnly={false}
              required={false}
            />
          </Label>,
          <div
            className={undefined}
          >
            <Checkbox
              checked={false}
              indeterminate={false}
              label="Track this search result in dashboard"
              onChange={[Function]}
            />
          </div>,
          false,
        ],
        "data-test": "save-this-search-dialog-content",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Textfield
              className={undefined}
              data-test="save-this-search-name-field"
              disabled={false}
              invalid={false}
              onChange={[MockFunction]}
              placeholder="Enter a name for this saved search"
              quiet={true}
              readOnly={false}
              required={false}
            />,
            "labelFor": "Save This Search",
            "value": "Name",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": undefined,
              "data-test": "save-this-search-name-field",
              "disabled": false,
              "invalid": false,
              "onChange": [MockFunction],
              "placeholder": "Enter a name for this saved search",
              "quiet": true,
              "readOnly": false,
              "required": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Checkbox
              checked={false}
              indeterminate={false}
              label="Track this search result in dashboard"
              onChange={[Function]}
            />,
            "className": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": false,
              "indeterminate": false,
              "label": "Track this search result in dashboard",
              "onChange": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SaveSearchExecutionContent /> component when Checkbox is checked state.isTrackInDashboardChecked is updated to true  1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SaveSearchExecutionContent
    onDefaultSortingChange={
      [MockFunction] {
        "calls": Array [
          Array [
            true,
          ],
        ],
      }
    }
    onSaveSearchNameChange={
      [MockFunction] {
        "calls": Array [
          Array [
            true,
          ],
        ],
      }
    }
    onSortingOrderChange={
      [MockFunction] {
        "calls": Array [
          Array [
            true,
          ],
        ],
      }
    }
    onTrackResultInDashboardChange={
      [MockFunction] {
        "calls": Array [
          Array [
            true,
          ],
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Label
          labelFor="Save This Search"
          value="Name"
        >
          <Textfield
            className={undefined}
            data-test="save-this-search-name-field"
            disabled={false}
            invalid={false}
            onChange={
              [MockFunction] {
                "calls": Array [
                  Array [
                    true,
                  ],
                ],
              }
            }
            placeholder="Enter a name for this saved search"
            quiet={true}
            readOnly={false}
            required={false}
          />
        </Label>,
        <div
          className={undefined}
        >
          <Checkbox
            checked={false}
            indeterminate={false}
            label="Track this search result in dashboard"
            onChange={[Function]}
          />
        </div>,
        false,
      ],
      "data-test": "save-this-search-dialog-content",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Textfield
            className={undefined}
            data-test="save-this-search-name-field"
            disabled={false}
            invalid={false}
            onChange={
              [MockFunction] {
                "calls": Array [
                  Array [
                    true,
                  ],
                ],
              }
            }
            placeholder="Enter a name for this saved search"
            quiet={true}
            readOnly={false}
            required={false}
          />,
          "labelFor": "Save This Search",
          "value": "Name",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": undefined,
            "data-test": "save-this-search-name-field",
            "disabled": false,
            "invalid": false,
            "onChange": [MockFunction] {
              "calls": Array [
                Array [
                  true,
                ],
              ],
            },
            "placeholder": "Enter a name for this saved search",
            "quiet": true,
            "readOnly": false,
            "required": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Checkbox
            checked={false}
            indeterminate={false}
            label="Track this search result in dashboard"
            onChange={[Function]}
          />,
          "className": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": false,
            "indeterminate": false,
            "label": "Track this search result in dashboard",
            "onChange": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Label
            labelFor="Save This Search"
            value="Name"
          >
            <Textfield
              className={undefined}
              data-test="save-this-search-name-field"
              disabled={false}
              invalid={false}
              onChange={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      true,
                    ],
                  ],
                }
              }
              placeholder="Enter a name for this saved search"
              quiet={true}
              readOnly={false}
              required={false}
            />
          </Label>,
          <div
            className={undefined}
          >
            <Checkbox
              checked={false}
              indeterminate={false}
              label="Track this search result in dashboard"
              onChange={[Function]}
            />
          </div>,
          false,
        ],
        "data-test": "save-this-search-dialog-content",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Textfield
              className={undefined}
              data-test="save-this-search-name-field"
              disabled={false}
              invalid={false}
              onChange={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      true,
                    ],
                  ],
                }
              }
              placeholder="Enter a name for this saved search"
              quiet={true}
              readOnly={false}
              required={false}
            />,
            "labelFor": "Save This Search",
            "value": "Name",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": undefined,
              "data-test": "save-this-search-name-field",
              "disabled": false,
              "invalid": false,
              "onChange": [MockFunction] {
                "calls": Array [
                  Array [
                    true,
                  ],
                ],
              },
              "placeholder": "Enter a name for this saved search",
              "quiet": true,
              "readOnly": false,
              "required": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Checkbox
              checked={false}
              indeterminate={false}
              label="Track this search result in dashboard"
              onChange={[Function]}
            />,
            "className": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": false,
              "indeterminate": false,
              "label": "Track this search result in dashboard",
              "onChange": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
